[package]
name = "upmon"
version = "0.1.0"
edition = "2021"
description = "Simple command line UPower monitor"
license = "MIT"
authors = ["Alan Bunbury"]
repository = "https://github.com/bunburya/upmon"
keywords = ["power", "upower", "battery", "laptop"]
categories = ["command-line-utilities"]

[dependencies]
futures = "0.3.30"
zbus = "3.15.0"
async-std = { version = "1.12.0", features = ["attributes"] }
chrono = "0.4.33"
clap = { version = "4.5.0", features = ["derive", "cargo"] }
strum = { version = "0.26.1", features = ["derive"] }
